Conveniences for issuing events when setting the current frame and client window.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ SRC += src/args.c
 SRC += src/chain.c
 SRC += src/client.c
 SRC += src/cmd.c
+SRC += src/current.c
 SRC += src/event.c
 SRC += src/frame.c
 SRC += src/geom.c
